--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -9,6 +9,7 @@
     "vaddr.h": "c",
     "malloc.h": "c",
     "stdio.h": "c",
-    "pagedir.h": "c"
+    "pagedir.h": "c",
+    "string.h": "c"
   }
 }
