--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -10,6 +10,7 @@
     "malloc.h": "c",
     "stdio.h": "c",
     "pagedir.h": "c",
-    "string.h": "c"
+    "string.h": "c",
+    "*.inc": "c"
   }
 }
