--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -13,6 +13,9 @@
     "string.h": "c",
     "*.inc": "c",
     "input.h": "c",
-    "syscall.h": "c"
+    "syscall.h": "c",
+    "exception.h": "c",
+    "filesys.h": "c",
+    "thread.h": "c"
   }
 }
